--- a/app/_templates/header.twig
+++ b/app/_templates/header.twig
@@ -7,11 +7,16 @@
       <div class="box-suggest">
         <div class="suggest__quick">
           <h3>Quick Searches</h3>
-          <a href="#" >All</a><a href="#" >District 1</a><a href="#" >Vinhomes CP</a><a href="#" >Pet Friendly</a>
+          <ul class="suggest__tag">
+            <li><a href="#" >All</a></li>
+            <li><a href="#" >District 1</a></li>
+            <li><a href="#" >Vinhomes CP</a></li>
+            <li><a href="#" >Pet Friendly</a></li>
+          </ul>
         </div>
         <div class="suggest__recent">
           <h3>Recent Searches</h3>
-          <ul class="suggest-list list-recent">
+          <ul class="suggest__list list-recent">
             <li><a href="#">HCM city</a></li>
             <li><a href="#">Thao Dien</a></li>
           </ul>
