--- a/app/listing.twig
+++ b/app/listing.twig
@@ -227,13 +227,13 @@
             <span class="bg--green tag">POPULAR <i class="fa fa-star"></i></span>
             <span><i class="fa fa-eye"></i> 230 views</span>
             <form>
-              <div class="form-group">
+              <div class="input-wrapper">
                 <input type="text" name="" placeholder="Your name" />
               </div>
-              <div class="form-group">
+              <div class="input-wrapper">
                 <input type="text" name="" placeholder="Your phone" />
               </div>
-              <div class="form-group">
+              <div class="input-wrapper">
                 <input type="email" name="" placeholder="Your email" />
               </div>
               <a href="#inspectionForm" data-toggle="modal" class="btn btn--red btn--full">Request Inspectation</a>
