--- a/app/assets/css/pages/_home.scss
+++ b/app/assets/css/pages/_home.scss
@@ -1,111 +1,3 @@
-.section-hero-banner {
-
-	height:auto;
-	background: url(../images/dummy/home.png) no-repeat;
-	background-size: cover;
-	padding: 20px;
-	padding-bottom:10%;
-	@include screen(medium){
-		padding:0;
-		padding-bottom:54%;
-		height:0;
-		overflow:hidden;
-	}
-	@include screen(large){
-		padding-bottom:46%;
-	}
-
-}
-
-.slide-bg {
-	background: #656565;
-	font-size: 0;
-	display:none;
-
-	@include screen(medium){
-		display: block;
-	}
-	img {
-		width: 100%;
-		opacity: 0.8;
-	}
-}
-
-.link-arrow {
-	color: $red;
-	text-decoration: underline;
-	position: relative;
-	margin-bottom: 10px;
-	margin-right: 15px;
-	float: right;
-	&:after {
-		content:'\f0d7';
-		position: absolute;
-		color: $red;
-		display: block;
-		font: normal normal normal 18px/1 FontAwesome;
-		right: -15px;
-		top: 2px;
-		transform:rotate(180deg);
-	}
-	&.active {
-		&:after {
-			transform:rotate(0deg);
-		}
-	}
-}
-.banner-wrapper {
-	@include screen(medium) {
-		width: 850px;
-		@include absolute( top 40% left 50%);
-		transform:translate(-50%, -50%);
-	}
-	@include screen(large) {
-		top: 50%;
-	}
-
-
-	.link-arrow {
-		color: $red;
-	}
-	[class*='col-'] {
-		padding: 0 10px;
-	}
-
-
-	h1 {
-		color: #fff;
-		font-size:28px;
-		text-transform: none;
-		@include screen(medium) {
-			font-size: $size-xxxl;
-			margin-bottom: 30px;
-		}
-		span {
-			display: none;
-		}
-		.active{
-			display: block;
-		}
-	}
-	.select-wrapper {
-		background: #fff;
-	}
-	a {
-		color: #fff;
-	}
-
-}
-
-
-.link-district{
-	li {
-		padding: 0 10px;
-	}
-}
-
-
-
 .site-sumary {
 	max-width: 340px;
 	margin: 0 auto;
@@ -123,26 +15,6 @@
 	span {
 		font-size: $size-xl;
 	}
-}
-
-.search-map {
-	position: relative;
-	text-align: left;
-	background: #fff;
-	padding: 5px;
-	padding-right: 30px;
-	border:1px solid $color-light;
-
-
-	&:after {
-		content:'\f041';
-		position: absolute;
-		top: 10px;
-		right: 10px;
-		color: $gray-dark;
-		display: block;
-		font: normal normal normal 24px/1 FontAwesome;
-	}	
 }
 
 .section-what-have {
@@ -376,7 +248,7 @@
 	position: relative;
 	height: 30px;
 	max-width: 200px;
-	margin: 0 auto;
+	margin: 0 auto 20px;
 	padding: 5px 10px;
 	border:1px solid $gray-medium;
 	@include screen(medium){
@@ -614,7 +486,7 @@
 		width: 40px;
 		height: 40px;
 		background: #fff;
-		top: 40%;
+		top: 45%;
 		box-shadow: 0 2px 10px #000;
 		@include screen(medium){
 			opacity: 0;
@@ -666,7 +538,9 @@
 	border-top: none;
 	@include screen(medium){
 		padding: 5px 30px 20px;
-
+	}
+	h3 {
+		margin-top: 20px;
 	}
 }
 
