--- a/app/assets/css/pages/_listing.scss
+++ b/app/assets/css/pages/_listing.scss
@@ -263,6 +263,7 @@
 		font-size: 10px;
 		padding: 0 10px;
 		text-align: center;
+		margin-top: 5px;
 		height: 30px;
 		@include screen(medium){
 
