--- a/app/list-property.twig
+++ b/app/list-property.twig
@@ -11,117 +11,113 @@
 
 		<section class="section-list-property">
 			<div class="container">
-				<h2 class="title-section">List Your Property</h2>
-				<form action="">
-					<p>It’s absolutely free to list your property with Hoozing. Please fill the following form and our
-						team will get in touch with you in the shortest time possible.
-					</p>
-					<h4>CONTACT INFORMATION *</h4>
-					<div class="input-wrapper">
-						<input type="text" placeholder="Your Name" />
-					</div>
-					<div class="input-wrapper">
-						<input type="text" placeholder="Email Address" />
-					</div>
-					<div class="input-wrapper">
-						<input type="text" placeholder="Phone Number" />
-					</div>
-					<div class="input-wrapper">
-						<input type="text" placeholder="Your Availability" />
-						<p>E.g. Available on weekdays after 3PM for house inspections</p>
-					</div>
-					<br />
-					<h4>APARTMENT OVERVIEW *</h4>
-					<div class="select-wrapper select-range">
-						<label>Apartment Project</label>
-						<ul>
-							<li class="active">0</li>
-							<li>$10000</li>
-							<li>$20000</li>
-							<li>$30000</li>
-							<li>$40000</li>
-						</ul>
-					</div>
-					<div class="input-wrapper">
-						<input type="text" placeholder="Address" />
-					</div>
-					<div class="select-wrapper select-range">
-						<label>District</label>
-						<ul>
-							<li class="active">0</li>
-							<li>1</li>
-							<li>2</li>
-							<li>3</li>
-							<li>4</li>
-						</ul>
-					</div>
-					<div class="input-wrapper">
-						<input type="text" placeholder="Price per month (USD)" />
-					</div>
-					<div class="input-wrapper">
-						<input type="text" placeholder="Bond" />
-					</div>
-					<div class="select-wrapper select-range">
-						<label>Furnishment</label>
-						<ul>
-							<li class="active">0</li>
-							<li>1</li>
-							<li>2</li>
-							<li>3</li>
-							<li>4</li>
-						</ul>
-					</div>
-					<div class="select-wrapper select-bed">
-						<span>Any bed</span>
-						<ul>
-							<li class="active">Bedroom</li>
-							<li>1+</li>
-							<li>2+</li>
-							<li>3+</li>
-							<li>4+</li>
-							<li>5+</li>
-							<li>6+</li>
-						</ul>
-					</div>
-					<div class="select-wrapper select-bath">
-						<span>Any bath</span>
-						<ul>
-							<li class="active">Bathrôm</li>
-							<li>1+</li>
-							<li>2+</li>
-							<li>3+</li>
-							<li>4+</li>
-							<li>5+</li>
-						</ul>
-					</div>
+				<form action="" class="form-property">
+					<div class="form-wrapper">
+						<h2>List Your Property</h2>
+						<p>It’s absolutely free to list your property with Hoozing. Please fill the following form and our
+							team will get in touch with you in the shortest time possible.
+						</p>
+						<h3>CONTACT INFORMATION *</h3>
+						<div class="input-wrapper">
+							<input type="text" placeholder="Your Name" />
+						</div>
+						<div class="input-wrapper">
+							<input type="text" placeholder="Email Address" />
+						</div>
+						<div class="input-wrapper">
+							<input type="text" placeholder="Phone Number" />
+						</div>
+						<div class="input-wrapper">
+							<input type="text" placeholder="Your Availability" />
+						</div>
+						<p class="note">E.g. Available on weekdays after 3PM for house inspections</p>
+						<h3>APARTMENT OVERVIEW *</h3>
+						<div class="select-wrapper select-range">
+							<span>Apartment Project</span>
+							<ul>
+								<li class="active">0</li>
+								<li>$10000</li>
+								<li>$20000</li>
+								<li>$30000</li>
+								<li>$40000</li>
+							</ul>
+						</div>
+						<div class="input-wrapper">
+							<input type="text" placeholder="Address" />
+						</div>
+						<div class="select-wrapper select-range">
+							<span>District</span>
+							<ul>
+								<li class="active">0</li>
+								<li>1</li>
+								<li>2</li>
+								<li>3</li>
+								<li>4</li>
+							</ul>
+						</div>
+						<div class="input-wrapper">
+							<input type="text" placeholder="Price per month (USD)" />
+						</div>
+						<div class="input-wrapper">
+							<input type="text" placeholder="Bond" />
+						</div>
+						<div class="select-wrapper select-range">
+							<span>Furnishment</span>
+							<ul>
+								<li class="active">0</li>
+								<li>1</li>
+								<li>2</li>
+								<li>3</li>
+								<li>4</li>
+							</ul>
+						</div>
+						<div class="select-wrapper select-bed">
+							<span>Any bed</span>
+							<ul>
+								<li class="active">Bedroom</li>
+								<li>1+</li>
+								<li>2+</li>
+								<li>3+</li>
+								<li>4+</li>
+								<li>5+</li>
+								<li>6+</li>
+							</ul>
+						</div>
+						<div class="select-wrapper select-bath">
+							<span>Any bath</span>
+							<ul>
+								<li class="active">Bathrôm</li>
+								<li>1+</li>
+								<li>2+</li>
+								<li>3+</li>
+								<li>4+</li>
+								<li>5+</li>
+							</ul>
+						</div>
 
-					<br />
-					<h4>AMENITIES *</h4>
+						<h3>AMENITIES *</h3>
 
-					<br />
-					<h4>FACILITIES *</h4>
+						<h3>FACILITIES *</h3>
 
-					<br />
-					<h4>DESCRIPTION & POLICIES *</h4>
-					<div class="input-wrapper">
-						<textarea name="text" id="" cols="30" rows="10" placeholder="Apartment Description">
-						</textarea>
+						<h3>DESCRIPTION & POLICIES *</h3>
+						<div class="input-wrapper">
+							<textarea name="text" id="" rows="10" placeholder="">
+							</textarea>
+						</div>
+						<p class="note">E.g. whether the building has been recently renovated, how far it is from city centre, the neighboorhood is suitable for young people or family…</p>
+						<div class="input-wrapper">
+							<textarea name="text" id="" rows="10" placeholder="Apartment Policies">
+							</textarea>
+						</div>
+						<p class="note">E.g. whether the building has been recently renovated, how far it is from city centre, the neighboorhood is suitable for young people or family…</p>
+						<h3>UPLOAD PHOTOS</h3>
+						<div class="wrap-input">
+							<input type="text">
+						</div>
+						<div class="button-wrapper">
+							<a href="#" class="button button--red" >SUBMIT LISTING</a>
+						</div>
 					</div>
-					<p>E.g. whether the building has been recently renovated, how far it is from city centre, the neighboorhood is suitable for young people or family…</p>
-					<div class="input-wrapper">
-						<textarea name="text" id="" cols="30" rows="10" placeholder="Apartment Policies">
-						</textarea>
-					</div>
-					<p>E.g. whether the building has been recently renovated, how far it is from city centre, the neighboorhood is suitable for young people or family…</p>
-					<br />
-					<h4>UPLOAD PHOTOS</h4>
-					<div class="wrap-input">
-						<input type="text">
-					</div>
-					<div class="button-wrapper">
-						<a href="#" class="button button--red" >SUBMIT LISTING</a>
-					</div>
-
 				</form>
 			</div>
 		</section>
