--- a/app/search-page.twig
+++ b/app/search-page.twig
@@ -383,7 +383,14 @@
             </ul>
 
           </div>
-
+          
+          <ul class="page">
+            <li class="page__prev"><a href="#">Prev</a></li>
+            <li class="active"><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li class="page__next"><a href="#">Next</a></li>
+          </ul>
 
           <div class=" tab-content active" id="search-list">
             <div class="row list-box">
