--- a/app/search-page.twig
+++ b/app/search-page.twig
@@ -504,6 +504,15 @@
 
             </div>
           </div>
+          
+          <ul class="page">
+            <li class="page__prev"><a href="#">Prev</a></li>
+            <li class="active"><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li class="page__next"><a href="#">Next</a></li>
+          </ul>
+
         </div>
 
         <div class="map-result show" data-module="MapResult">
