--- a/app/_templates/header.twig
+++ b/app/_templates/header.twig
@@ -43,9 +43,52 @@
           <button class="btn-submit"><i class="fa fa-search"></i></button>
         </div>
       </li>
+      <li class="login--member">
+        <div class="btn-group">
+          <a class="dropdown-toggle menu-item" data-toggle="dropdown">
+            <div class="header-avatar avatar" data-div="user-avatar" style="background-image: url('https://graph.facebook.com/1689272867796788/picture')"></div>
+            <span class="welcome">Welcome,</span>
+            Thanh Nguyen 
+            <span class="caret"></span>
+            <span class="badge badge-header">2</span>
+          </a>
+          <ul class="dropdown-menu login-dropdown" role="menu">
+            <li>
+              <a class="header-item" href="https://goo.gl/1ZSS6S">
+                <b><i class="fa fa-envelope-open-o"></i> Messages</b>
+                <span class="badge badge-notification"></span>
+              </a>
+            </li>
+            <li>
+              <a class="header-item" href="https://goo.gl/1ZSS6S">
+                <b><i class="fa fa-star-o"></i> Notifications:</b>
+              </a>
+            </li>
+            <li>
+              <a class="header-item" href="/Manage?no=email">
+                <i class="fa fa-angle-right"></i>  You need to complete profile with verify email, phone number
+                <span class="badge badge-notification">2</span>
+              </a>
+            </li>
+            <li>
+              <a class="header-item" href="https://goo.gl/1ZSS6S">
+                <i class="fa fa-angle-right"></i>  Welcome to the Hoozing.com website
+              </a>
+            </li>
+            <li class="divider"></li>
+            <li><a class="header-item" href="/Wishlist"><i class="fa fa-heart-o"></i> Wish Lists
+              <span class="badge badge-notification badge-total-wish"></span>
+            </a></li>
+            <li><a class="header-item" href="/compare-listing"><i class="fa fa-plus"></i> Compare Listings
+              <span class="badge badge-notification badge-total-compare"></span>
+            </a></li>
+            <li><a class="header-item" href="/Manage"><i class="fa fa-pencil"></i> Edit Profile</a></li>
+            <li><a class="header-item" href="javascript:document.getElementById('logoutForm').submit()"><i class="fa fa-sign-out"></i> Logout</a></li>
+          </ul>
+        </div>
+      </li>
       <li class="menu__login">
         <a href="upload.html"><i class="fa fa-user-circle" aria-hidden="true"></i>login</a>
-        <span>Hi, Thanh</span>
       </li>
       <li class="phone-number">
         <a href="#"><i class="fa fa-phone" aria-hidden="true"></i>84902823393</a>
