--- a/app/assets/css/base/_breakpoints.scss
+++ b/app/assets/css/base/_breakpoints.scss
@@ -10,7 +10,7 @@ $breakpoints: (
 @mixin screen($breakpoint, $mobileFirst: true) {
   @if $mobileFirst {
     @if map-has-key($breakpoints, $breakpoint) {
-      @media (min-width: #{map-get($breakpoints, $breakpoint)}) {
+      @media (min-width: calc(#{map-get($breakpoints, $breakpoint)})) {
         @content;
       }
     }
@@ -22,7 +22,7 @@ $breakpoints: (
   }
   @else {
     @if map-has-key($breakpoints, $breakpoint) {
-      @media (max-width: #{map-get($breakpoints, $breakpoint)} - 1px) {
+      @media (max-width: calc(#{map-get($breakpoints, $breakpoint)} - 1px)) {
         @content;
       }
     }
