--- a/app/assets/css/pages/_search.scss
+++ b/app/assets/css/pages/_search.scss
@@ -310,6 +310,7 @@
         cursor: pointer;
         position: absolute;
         top: 3px;
+        z-index: 2;
         right: 3px;
         width: 20px;
         height: 20px;
