--- a/app/_templates/header.twig
+++ b/app/_templates/header.twig
@@ -87,9 +87,9 @@
           </ul>
         </div>
       </li>
-      <li class="menu__login">
+      <!-- <li class="menu__login">
         <a href="upload.html"><i class="fa fa-user-circle" aria-hidden="true"></i>login</a>
-      </li>
+      </li> -->
       <li class="phone-number">
         <a href="#"><i class="fa fa-phone" aria-hidden="true"></i>84902823393</a>
       </li>
