--- a/app/assets/css/blocks/_header.scss
+++ b/app/assets/css/blocks/_header.scss
@@ -13,6 +13,20 @@ header {
   }
 
 
+  .btn-group.open {
+    >.dropdown-menu {
+      display: none;
+      @include screen(medium){
+        display: block;
+      }
+    }
+    .dropdown-toggle  {
+      cursor: pointer;
+      box-shadow: none;
+    }
+  }
+
+
   .dropdown-menu {
     left:auto;
     right: 0;
@@ -86,8 +100,9 @@ header {
   }
 
   .caret, .badge ,.avatar{
-    @include screen(medium, false){
-      display: none;
+    display: none;
+    @include screen(medium){
+      display: inline-block;
     }
   }
 
@@ -284,7 +299,7 @@ header {
 
 #searchHeader {
   display: none;
-  @include screen(medium,){
+  @include screen(medium){
     display: block;
   }
 
@@ -351,6 +366,7 @@ nav {
     display: block;
     padding: 0;
     height: auto;
+    width: 100%;
     float: right;
     text-align: right;
     background: none;
@@ -364,28 +380,26 @@ nav {
   }
 
   &.active {
-    @include screen(medium, false){
-      margin:0;
-      width: 100%;
-      opacity: 1;
-      width:100%;
-      height: 10000px;
-      @include absolute(top 50px left);
+    margin:0;
+    width: 100%;
+    opacity: 1;
+    width:100%;
+    height: 10000px;
+    @include absolute(top 50px left);
+    @include screen(medium){
+      height: auto;
+      position: relative;
     }
 
     li {
-      @include screen(medium, false){
-        width:100%;
-      }
+      width:100%;
       @include screen(medium){
         width:auto;
       }
     }
     a{
-      @include screen(medium, false){
-        background: #fff; 
-        padding: 0 10px;
-      }
+      background: #fff; 
+      padding: 0 10px;
     }
   }
 
@@ -398,7 +412,6 @@ nav {
       display: inline-block;
       background: none !important;
       position: relative;
-      margin-right: 5px;
       padding: 0 5px;
       vertical-align: middle;
       transition:0.3s ease-out;
@@ -450,10 +463,14 @@ nav {
       text-shadow:none;
       transform:none;
       display: inline-block;
+      letter-spacing: 0;
       border-bottom: 4px solid transparent;
       &:hover {
         border-color: #fff;
       }
+    }
+    @include screen(large){
+      letter-spacing: 1px;
     }
     br {
       display: none;
@@ -657,21 +674,13 @@ nav {
   }
 }
 
-.btn-group.open {
-  >.dropdown-menu {
-    display: block;
-  }
-  .dropdown-toggle  {
-    cursor: pointer;
-    box-shadow: none;
-  }
-}
 
 .badge {
   font-weight: bold;
-  padding: 3px 4px;
+  padding: 0 4px;
   border-radius: 3px;
   font-size: 10px;
+  line-height: 14px;
 }
 
 .badge-notification {
