--- a/app/assets/css/elements/_modal.scss
+++ b/app/assets/css/elements/_modal.scss
@@ -38,13 +38,10 @@
   .slick-arrow {
     font-size: 0;
     position: absolute;
-    top: -220%;
+    top: 50%;
     z-index: 10;
     right: 0;
-    @include screen(small){
-      top: -230%;
-    }
-    @include screen(large){
+    @include screen(medium){
       top: -350%;
     }
   }
@@ -104,7 +101,7 @@
     max-height: 500px;
   }
   img {
-    height: 220px;
+    height: auto;
 
     @include screen(small){
       height: 300px;
