--- a/app/list-property.twig
+++ b/app/list-property.twig
@@ -86,7 +86,7 @@
 						<div class="select-wrapper select-bath">
 							<span>Any bath</span>
 							<ul>
-								<li class="active">Bathrôm</li>
+								<li class="active">Bathroom</li>
 								<li>1+</li>
 								<li>2+</li>
 								<li>3+</li>
@@ -101,12 +101,12 @@
 
 						<h3>DESCRIPTION & POLICIES *</h3>
 						<div class="input-wrapper">
-							<textarea name="text" id="" rows="10" placeholder="">
+							<textarea name="text" rows="10">
 							</textarea>
 						</div>
 						<p class="note">E.g. whether the building has been recently renovated, how far it is from city centre, the neighboorhood is suitable for young people or family…</p>
 						<div class="input-wrapper">
-							<textarea name="text" id="" rows="10" placeholder="Apartment Policies">
+							<textarea name="text" rows="10">
 							</textarea>
 						</div>
 						<p class="note">E.g. whether the building has been recently renovated, how far it is from city centre, the neighboorhood is suitable for young people or family…</p>
