--- a/app/list-property.twig
+++ b/app/list-property.twig
@@ -101,21 +101,23 @@
 
 						<h3>DESCRIPTION & POLICIES *</h3>
 						<div class="input-wrapper">
-							<textarea name="text" rows="10">
-							</textarea>
+							<textarea name="text" rows="10"></textarea>
 						</div>
 						<p class="note">E.g. whether the building has been recently renovated, how far it is from city centre, the neighboorhood is suitable for young people or family…</p>
 						<div class="input-wrapper">
-							<textarea name="text" rows="10">
-							</textarea>
+							<textarea name="text" rows="10"></textarea>
 						</div>
 						<p class="note">E.g. whether the building has been recently renovated, how far it is from city centre, the neighboorhood is suitable for young people or family…</p>
 						<h3>UPLOAD PHOTOS</h3>
-						<div class="wrap-input">
-							<input type="text">
+						<div class="input-wrapper input-photo" data-size="500" data-quality="0.6">
+							<label>
+								Multiple photos selection is allowed
+								<span class="icon-inline icon-upload"></span>
+								<input type="file" class="input-file" id="input-file" multiple />
+							</label>
 						</div>
-						<div class="button-wrapper">
-							<a href="#" class="button button--red" >SUBMIT LISTING</a>
+						<div class="button-wrapper text-center">
+							<a href="#" class="btn btn--red" >SUBMIT LISTING</a>
 						</div>
 					</div>
 				</form>
