--- a/app/list-property.twig
+++ b/app/list-property.twig
@@ -97,6 +97,82 @@
 
 						<h3>AMENITIES *</h3>
 
+						<ul class="list-check">
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="f_tv" name="f_tv">
+                    <label for="f_tv">TV</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="f_microwave" name="f_microwave">
+                    <label for="f_microwave">Microwave</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="f_aircondition" name="f_aircondition">
+                    <label for="f_aircondition">Air contitioner</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="f_chimney" name="f_chimney">
+                    <label for="f_chimney">Electric chimney</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="f_smock-detector" name="f_smock-detector">
+                    <label for="f_smock-detector">Smoke detector</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="f_fire-extinguisher" name="f_fire-extinguisher">
+                    <label for="f_fire-extinguisher">Fire extinguisher</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="f_balcony" name="f_balcony">
+                    <label for="f_balcony">Balcony</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="f_first-aid-kit" name="f_first-aid-kit">
+                    <label for="f_first-aid-kit">First Aid Kit</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="f_bathtub" name="f_bathtub">
+                    <label for="f_bathtub">Bathtub</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="f_geyser" name="f_geyser">
+                    <label for="f_geyser">Geyser</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="f_essentails" name="f_essentails">
+                    <label for="f_essentails">Essentails</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="f_dish-washer" name="f_dish-washer">
+                    <label for="f_dish-washer">Dish washer</label>
+                  </div>
+                </li>
+              </ul>
+              <a href="#" class="more"> More amenties</a>
+
 						<h3>FACILITIES *</h3>
 
 						<h3>DESCRIPTION & POLICIES *</h3>
@@ -110,6 +186,7 @@
 						<p class="note">E.g. whether the building has been recently renovated, how far it is from city centre, the neighboorhood is suitable for young people or family…</p>
 						<h3>UPLOAD PHOTOS</h3>
 						<div class="input-wrapper input-photo" data-size="500" data-quality="0.6">
+							<span class="icon"><i class="fa fa-folder-open"></i> BROWSER</span>
 							<label>
 								Multiple photos selection is allowed
 								<span class="icon-inline icon-upload"></span>
