--- a/app/list-property.twig
+++ b/app/list-property.twig
@@ -175,6 +175,81 @@
 
 						<h3>FACILITIES *</h3>
 
+						<ul class="list-check">
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="e-backup" name="e-backup">
+                    <label for="e-backup">24Hr Electricity Backup</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="parking" name="parking">
+                    <label for="parking">Parking</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="community-hall" name="community-hall">
+                    <label for="community-hall">Community Hall</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="club" name="club">
+                    <label for="club">Club House</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="restaurant" name="restaurant">
+                    <label for="restaurant">Restaurant</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="coffee-shop" name="coffee-shop">
+                    <label for="coffee-shop">Coffee-shop</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="banking-atm" name="banking-atm">
+                    <label for="banking-atm">Banking/ ATM</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="phamacy" name="phamacy">
+                    <label for="phamacy">Phamacy</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="shopping-mall" name="shopping-mall">
+                    <label for="shopping-mall">Shopping mall</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="supermarket" name="supermarket">
+                    <label for="supermarket">Supermarket</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="swimming-pool" name="swimming-pool">
+                    <label for="swimming-pool">Swimming Pool</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox-wrapper check-switch">
+                    <input type="checkbox" id="gymnasiums" name="gymnasiums">
+                    <label for="gymnasiums">Gymnasiums</label>
+                  </div>
+                </li>
+              </ul>
+
 						<h3>DESCRIPTION & POLICIES *</h3>
 						<div class="input-wrapper">
 							<textarea name="text" rows="10"></textarea>
@@ -194,7 +269,7 @@
 							</label>
 						</div>
 						<div class="button-wrapper text-center">
-							<a href="#" class="btn btn--red" >SUBMIT LISTING</a>
+							<a href="#" class="btn btn--red btn--full" >SUBMIT LISTING</a>
 						</div>
 					</div>
 				</form>
