--- a/app/neighborhood-page.twig
+++ b/app/neighborhood-page.twig
@@ -36,7 +36,7 @@
 		</section>
 
 
-		<section class="project__detail">
+		<section class="project__detail project__property">
 			<div class="container">
 				<h3 class="block-title" id="description">Description</h3>
 				<div class="row">
