--- a/app/assets/css/blocks/_highlight.scss
+++ b/app/assets/css/blocks/_highlight.scss
@@ -1,45 +1,45 @@
-.summary__wrapper {
-  font-size: 0;
-  margin: 20px 0;
-  @include screen(medium){
-    margin:  50px -2%;
+// .summary__wrapper {
+//   font-size: 0;
+//   margin: 20px 0;
+//   @include screen(medium){
+//     margin:  50px -2%;
     
-  }
-  .item {
-    display: inline-block;
-    vertical-align: top;
-    border: 2px solid #ddd;
-    text-align: center;
-    width: 46%;
-    margin:10px 0;
-    padding: 0 20px 10px;
-    border-radius: 5px;
-    @include screen(medium){
-      margin:30px 2%;
-      padding: 0 60px 30px;
-    }
-  }
-  .item__icon {
-    margin: -35px 0 20px;
-    font-size: 32px;
-    background: $red;
-    width: 70px;
-    display: inline-block;
-    line-height: 65px;
-    height: 70px;
-    border-radius: 50%;
+//   }
+//   .item {
+//     display: inline-block;
+//     vertical-align: top;
+//     border: 2px solid #ddd;
+//     text-align: center;
+//     width: 46%;
+//     margin:10px 0;
+//     padding: 0 20px 10px;
+//     border-radius: 5px;
+//     @include screen(medium){
+//       margin:30px 2%;
+//       padding: 0 60px 30px;
+//     }
+//   }
+//   .item__icon {
+//     margin: -35px 0 20px;
+//     font-size: 32px;
+//     background: $red;
+//     width: 70px;
+//     display: inline-block;
+//     line-height: 65px;
+//     height: 70px;
+//     border-radius: 50%;
 
-    i {
-      color: #fff;
-      margin: 0;
-    } 
-  }
-  h3 {
-    font-size: 18px;
-    margin: 0 0 20px;
-  }
-  p {
-    font-size: 16px;
-  }
+//     i {
+//       color: #fff;
+//       margin: 0;
+//     } 
+//   }
+//   h3 {
+//     font-size: 18px;
+//     margin: 0 0 20px;
+//   }
+//   p {
+//     font-size: 16px;
+//   }
 
-}
+// }
