--- a/app/assets/css/pages/_listing.scss
+++ b/app/assets/css/pages/_listing.scss
@@ -4,7 +4,7 @@
 	margin: 20px 0;
 	width: 100%;
 	@include screen(medium){
-		margin: 50px 0 20px;
+		margin: 30px 0 20px;
 
 	}
 }
@@ -327,5 +327,13 @@
 	display: none;
 	@include screen(medium){
 		display: block;
+	}
+}
+
+.project__property {
+	.block-title {
+		@include screen(small){
+			margin-top: 0;
+		}
 	}
 }
