--- a/app/list-property.twig
+++ b/app/list-property.twig
@@ -252,11 +252,11 @@
 
 						<h3>DESCRIPTION & POLICIES *</h3>
 						<div class="input-wrapper">
-							<textarea name="text" rows="10"></textarea>
+							<textarea name="text" rows="10" placeholder="Apartment Description"></textarea>
 						</div>
 						<p class="note">E.g. whether the building has been recently renovated, how far it is from city centre, the neighboorhood is suitable for young people or family…</p>
 						<div class="input-wrapper">
-							<textarea name="text" rows="10"></textarea>
+							<textarea name="text" rows="10" placeholder="Apartment Policies"></textarea>
 						</div>
 						<p class="note">E.g. whether the building has been recently renovated, how far it is from city centre, the neighboorhood is suitable for young people or family…</p>
 						<h3>UPLOAD PHOTOS</h3>
