--- a/app/_templates/layout.twig
+++ b/app/_templates/layout.twig
@@ -30,10 +30,10 @@
 
   <!-- FOOTER -->
   {% include './footer.twig' %}
-   <script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-migrate-3.0.1.min.js"></script>
+  
   <!----<script src="assets/js/libs/jquery-3.3.1.min.js"></script>
   <script src="assets/js/libs/jquery-ui.min.js"></script>
   <script src="assets/js/libs/jplist.sort-bundle.min.js"></script>
