--- a/app/assets/css/blocks/_form-property.scss
+++ b/app/assets/css/blocks/_form-property.scss
@@ -16,6 +16,11 @@
 		font-size: 16px;
 		text-transform: uppercase;
 	}
+	.select-bed,.select-bath {
+		&:before {
+			top: 16px;
+		}
+	}
 
 	.input-wrapper {
 		@include placeholder {
