--- a/app/assets/css/pages/_global.scss
+++ b/app/assets/css/pages/_global.scss
@@ -16,8 +16,11 @@ body {
 .container {
 	padding-bottom: 1px;
 	overflow: hidden;
-	max-width: 1155px;
+	max-width: 1024px;
 	width: auto;
+	@include screen(normalLaptop){
+		max-width: 1155px;
+	}
 }
 
 input,textarea {
@@ -584,7 +587,8 @@ section {
 }
 
 .page {
-	margin: 20px 0;
+	margin: 0;
+	padding: 0;
 	text-align: center;
 
 	a {
