--- a/app/assets/css/pages/_search.scss
+++ b/app/assets/css/pages/_search.scss
@@ -49,7 +49,8 @@
 
 .search__list {
   font-size: 16px;
-  margin: 30px 0 10px;
+  margin: 0;
+  padding: 30px 0 10px;
 
   > div {
     display: inline-block;
