update tag rent

--- a/app/assets/css/blocks/_header.scss
+++ b/app/assets/css/blocks/_header.scss
@@ -377,6 +377,9 @@ nav {
     text-align: right;
     background: none;
   }
+  i {
+    margin-right: 5px;
+  }
 
   .form-wrapper {
     padding: 5px 0;
