--- a/app/listing.twig
+++ b/app/listing.twig
@@ -10,7 +10,7 @@
       <h3 class="hide-for-medium">
         RESORT - LIKE NEW APARTMENT IN STARHILL DISTRICT 7
         <span class="price"><b>$1,200</b> per month</span>
-        <span class="bg--green tag">POPULAR <i class="fa fa-star"></i></span>
+        <span class="bg--gray tag">RENTED <i class="fa fa-lock"></i></span>
       </h3>
     </div>
   </div>
@@ -28,6 +28,7 @@
             </div>
             <div class="col-md-4 gallery__info hide-for-small">
               <h3>house name</h3>
+              <p><b class="apartment-price">$1,200</b> per month</p>
               <ul class="thumb-service thumb--2">
                 <li><i class="fa fa-map-marker"></i> District 7</li>
                 <li><i class="fa fa-bed"></i> 1 bed </li>
@@ -35,7 +36,7 @@
               </ul>
               <div class="btn-wrapper">
                 <a href="#" class="btn btn--red btn--full">Request Inspection</a>
-                <a href="#" class="btn btn--full"><i class="fa fa-phone"></i><span>Direct call</span></a>
+                <a href="#" class="btn btn--full"><i class="fa fa-phone"></i><span>(+84) 899 909 790</span></a>
               </div>
             </div>
           </div>
@@ -54,6 +55,7 @@
                 h012345
                 <span>House Code</span>
               </div>
+              <p><b class="apartment-price">$1,200</b> per month</p>
               <p class="locate"><i class="fa fa-map-marker"></i> District 7</p>
             </div>
             <div class="row inspect__info">
@@ -128,6 +130,8 @@
               h012345
               <span>House Code</span>
             </div>
+
+            <p><b class="apartment-price">$1,200</b> per month</p>
             <p class="locate"><i class="fa fa-map-marker"></i> District 7</p>
 
             <h3 class="block-title"> Overview</h3>
@@ -223,8 +227,8 @@
         <div class="col-md-4 block-aside">
           <div class="block-signup">
             <span class="logo-icon"></span>
-            <p><b>$1,200</b> per month</p>
-            <span class="bg--green tag">POPULAR <i class="fa fa-star"></i></span>
+            <p><b class="apartment-price">$1,200</b> per month</p>
+            <span class="bg--gray tag">RENTED <i class="fa fa-lock"></i></span>
             <span><i class="fa fa-eye"></i> 230 views</span>
             <form>
               <div class="input-wrapper">
@@ -350,6 +354,7 @@
                 <li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
               </ul>
             </div>
+            <span class="tag-cate bg--gray">RENTED <i class="fa fa-lock"></i></span>
             <span class="love"><i class="fa fa-heart-o"></i></span>
             <span class="price-tag">$600</span>
           </div>
