--- a/app/assets/css/elements/_modal.scss
+++ b/app/assets/css/elements/_modal.scss
@@ -42,6 +42,9 @@
     z-index: 10;
     right: 0;
     @include screen(medium){
+      top: -225%;
+    }
+    @include screen(normalLaptop){
       top: -350%;
     }
   }
@@ -50,8 +53,7 @@
   }
   h3 {
     text-transform: none;
-    font-size: 28px;
-    line-height: 34px;
+    font-size: 22px;
   }
 }
 
@@ -117,6 +119,13 @@
     height: 90px;
     padding: 0 10px;
     cursor: pointer;
+    @include screen(medium) {
+      &:hover {
+        img {
+          opacity: 1;
+        }
+      }
+    }
   }
   img {
     opacity: 0.4;
@@ -130,7 +139,6 @@
   .slick-current {
     img {
       opacity: 1;
-      
     }
   }
 }
