--- a/app/assets/css/pages/_home.scss
+++ b/app/assets/css/pages/_home.scss
@@ -24,6 +24,9 @@
 	span {
 		margin: 0 10px;
 	}
+	i {
+		margin-right: 5px;
+	}
 	p {
 		margin-bottom: 0;
 		font-size: $size-m;
@@ -355,7 +358,9 @@
 	li {
 		padding: 5px 0;
 	}
+
 	i {
+		margin-right: 5px;
 		font-size: 11px;
 		text-align: center;
 		@include screen(medium){
